# labs-evm

./: .gitignore  README.md
OpenCV_lab5/: CMakeLists.txt  main.cpp
Отчет/: Отчет_лаб_5_Якуба_23210.doc
